--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -23,9 +23,9 @@ $pink-color:          #f92080 !default;
 $pink-color-light:    #ffdddd !default;
 $yellow-color:        #efcc00 !default;
 
-$grey-color:          #828282 !default;
+$grey-color:          #1500ce !default;
 $grey-color-light:    lighten($grey-color, 40%);
-$grey-color-dark:     darken($grey-color, 25%);
+$grey-color-dark:     darken($grey-color, 20%);
 
 $white-color: #ffffff !default;
 $black-color: #000000 !default;
@@ -34,5 +34,5 @@ $black-color: #000000 !default;
 // Theme colors
 
 $code-bg-color-light:     rgba($purple-color, 0.05);
-$code-bg-color-dark:      #2c3237 !default;
+$code-bg-color-dark:      #2c2c37 !default;
 
