--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -23,7 +23,7 @@ $pink-color:          #f92080 !default;
 $pink-color-light:    #ffdddd !default;
 $yellow-color:        #efcc00 !default;
 
-$grey-color:          #1500ce !default;
+$grey-color:          #1700e6 !default;
 $grey-color-light:    lighten($grey-color, 40%);
 $grey-color-dark:     darken($grey-color, 20%);
 
