--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -23,8 +23,8 @@ $pink-color:          #f92080 !default;
 $pink-color-light:    #ffdddd !default;
 $yellow-color:        #efcc00 !default;
 
-$grey-color:          #1700e6 !default;
-$grey-color-light:    lighten($grey-color, 40%);
+$grey-color:          #1000a1 !default;
+$grey-color-light:    lighten($grey-color, 80%);
 $grey-color-dark:     darken($grey-color, 20%);
 
 $white-color: #ffffff !default;
